@@ -1,9 +1,14 @@
 2009-06-04  Alan McGovern  <amcgovern@novell.com>
 
+	* System.Windows/ContentControlTest.cs: Add two more tests checking how
+	IsEnabledChanged is fired.
+
+2009-06-04  Alan McGovern  <amcgovern@novell.com>
+
 	* System.Windows/DependencyPropertyTests.cs: Add test to check if the
 	Changed event for user registered DPs is sync or async.
 
-	2009-06-04  Alan McGovern  <amcgovern@novell.com>
+2009-06-04  Alan McGovern  <amcgovern@novell.com>
 
 	* System.Windows/ControlTest.cs: Add test to show that IsEnabledChanged
 	is emitted asynchronously. Remove MoonlightBug from a test which is
